--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
-					<finalName>outlierasm</finalName>
+					<finalName>instantreloader</finalName>
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
