--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,14 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>14.0.1</version>
 		</dependency>
 	</dependencies>
 
@@ -77,12 +81,16 @@
 							<relocations>
 								<relocation>
 									<pattern>org.objectweb</pattern>
-									<shadedPattern>org.lftechnology.outlier.thirdparty.org.objectweb</shadedPattern>
+									<shadedPattern>org.outlier.thirdparty.org.objectweb</shadedPattern>
 								</relocation>
 								<relocation>
-                                    <pattern>org.apache.commons</pattern>
-                                    <shadedPattern>org.lftechnology.outlier.thirdparty.org.apache.commons</shadedPattern>
-                                </relocation>
+									<pattern>org.apache.commons</pattern>
+									<shadedPattern>org.outlier.thirdparty.org.apache.commons</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>com.google</pattern>
+									<shadedPattern>org.outlier.thirdparty.com.google</shadedPattern>
+								</relocation>
 							</relocations>
 						</configuration>
 					</execution>
